# tech-clash

./: .gitignore  LICENSE  readme.md
backend/: main.py  pyproject.toml  requiements.txt
frontend/app/: page.tsx
frontend/app/analyze/: page.tsx
ml model/: pyproject.toml  train.py
