[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.1",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "uvicorn>=0.40.0",
]
